# scansnap-web

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  run-development-server  scanimage_test.py  start_dev_server.sh  utils.yml.example
flask/: Pipfile  run.py  scansnap.wsgi
scanimage-test-command/: scanimage  scanimage_test.py
scansnap/: ScanEventListener.py  __init__.py  config.py  forms.py  routes.py  test_utils.py  utils.py  websocketserver.py
scansnap/static/: main.css  main.js
scansnap/templates/: home.html  layout.html  main.html
scansnapweb/: manage.py
scansnapweb/scansnapweb/: asgi.py  settings.py  urls.py  wsgi.py
scansnapweb/scansnapwebapp/: apps.py  exceptions.py  forms.py  models.py  scanner_controller.py  urls.py  utils.py  views.py
scansnapweb/scansnapwebapp/migrations/: 0001_initial.py  0002_scan_brightness_scan_page_rotate_options_and_more.py  0003_rename_paper_height_scan_sheet_height_and_more.py  0004_alter_scan_page_rotate_options.py
scansnapweb/scansnapwebapp/static/: main.css  main.js
scansnapweb/scansnapwebapp/templates/: layout.html
scansnapweb/scansnapwebapp/templates/scansnapwebapp/: home.html  main.html
scansnapweb/templates/: layout.html
scansnapweb/templates/registration/: login.html  register.html
scansnapweb/users/: forms.py  urls.py  views.py
tests/: test_apis.py
